maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:16: error: not found: value keepHandsOnRightWall
            keepHandsOnRightWall()
            ^IslandMaze:21: error: not found: value keepHandsOnLeftWall
            keepHandsOnLeftWall()
            ^IslandMaze:27: error: not found: value keepHandsOnRightWall
        keepHandsOnRightWall()
        ^